<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/details_frag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:clickable="true"
                android:orientation="vertical"
                android:weightSum="1">
...
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:tint="?attr/colorPrimaryDark"
        app:srcCompat="@drawable/ic_star_black_24dp"/>

    <ImageButton
        android:id="@+id/button_details_facebook"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/details_fragment_picture"
        android:layout_alignRight="@+id/details_fragment_picture"
        android:layout_below="@+id/details_description"
        android:background="?attr/selectableItemBackgroundBorderless"
...
