...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/profile_fragment_scrollview"
...
                    android:layout_marginStart="6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_more_horiz_black_24dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/music_history_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_profile_music_tag"
                    android:layout_marginTop="24dp"/>
...
